# mcv_music

./: CMakeLists.txt  README.md
lib/SharedMemory/: CMakeLists.txt  mcv_shared_memory.i  property.c  property.h  shared_memory.c  shared_memory.h
src/: CMakeLists.txt
src/jack_source/: jack_source.cpp  jack_source.h  main.cpp  simple_client.c
src/plugins/: audio_effect.cpp  audio_effect.h  audio_freeverb.cpp  audio_freeverb.h  audio_octavedown.cpp  audio_octavedown.h  audio_properties.cpp  audio_properties.h
src/tools/: fft_perso.c  fft_perso.h
webserver/: index.html  style.css  webserver.py
webserver/src/: cubie.js
